# program

./: .gitignore  .solitarc.js  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  splitwave.json  splitwave.ts
22-06-23_idl/: splitwave.json
app/: .gitignore  .npmignore  .solitarc.js  LICENSE  package.json
app/idl/: splitwave.json
programs/splitwave/: Cargo.toml
programs/splitwave/src/: errors.rs  id.rs  lib.rs  utils.rs
programs/splitwave/src/instructions/: create_splitwave.rs  create_splitwave_id.rs  disburse_splitwave.rs  mod.rs  pay_splitwave.rs  update_splitwave.rs
programs/splitwave/src/state/: mod.rs  splitwave.rs  splitwave_id.rs
tests/: constants.ts  lib.ts  splitwave.ts
