[package]
name = "splitwave"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "splitwave"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["token", "metadata"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
clockwork-sdk = { version = "~2.0.1" }
shank = "0.0.12"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
solana-program = "1.14"
arrayref = "0.3.6"
mpl-token-metadata = { version = "1.7", features = ["no-entrypoint"] }
